fix double scrollbar issue when megadropdown is open

--- a/packages/components/src/components/post-header/post-header.scss
+++ b/packages/components/src/components/post-header/post-header.scss
@@ -15,6 +15,11 @@
   position: relative;
 }
 
+:host:has(slot[name='post-mainnavigation']:has(slot[name='post-mainnavigation']))
+  .navigation.extended {
+  overflow: hidden !important;
+}
+
 :host(:not(:has([slot='title']))) {
   .local-header {
     padding-block-start: 0;
@@ -205,7 +210,9 @@
     height: calc(100vh - var(--header-height));
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    &.scroll-y {
+      overflow-y: auto;
+    }
 
     ::slotted(post-mainnavigation) {
       flex-grow: 1 !important;
